add defaults signing options in CrushBootstrap.xcconfig

--- a/CrushBootstrap/Other-Sources/CrushBootstrap.xcconfig
+++ b/CrushBootstrap/Other-Sources/CrushBootstrap.xcconfig
@@ -17,3 +17,8 @@ WARNING_CFLAGS[config=*] = $(inherited) -Wall -Wextra -Wno-unused-parameter -Wno
 
 // Tone down xcconfigs a touch:
 GCC_TREAT_WARNINGS_AS_ERRORS = NO
+
+// Application Signing
+APPLICATION_BUNDLE_IDENTIFIER = com.appunite
+CODE_SIGN_IDENTITY = iPhone Developer
+PROVISIONING_PROFILE =
