--- a/CrushBootstrap/Other-Sources/CrushBootstrap-Info.plist
+++ b/CrushBootstrap/Other-Sources/CrushBootstrap-Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>GITHash</key>
+	<string></string>
 </dict>
 </plist>
