--- a/CrushBootstrap/Other-Sources/CrushBootstrap-Info.plist
+++ b/CrushBootstrap/Other-Sources/CrushBootstrap-Info.plist
@@ -22,8 +22,12 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>0</string>
+	<key>GITHash</key>
+	<string></string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -41,7 +45,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>GITHash</key>
-	<string></string>
 </dict>
 </plist>
